# enumreprs-derive

./: Cargo.toml  README.md
src/: from_repr.rs  into_repr.rs  lib.rs  util.rs
tests/: test.rs
