[package]
name = "enumreprs_derive"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
enumreprs = { git = "https://github.com/Benonardo/enumreprs", version = "1.1.0"}
proc-macro-error = "1.0.4"
proc-macro2 = "1.*"
quote = "1.*"
syn = "2.*"
